--- a/Examples/CSharp/GroupDocs.Comparison.Examples.CSharp.csproj
+++ b/Examples/CSharp/GroupDocs.Comparison.Examples.CSharp.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GroupDocs.Comparison, Version=3.0.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\GroupDocs.Comparison.dll</HintPath>
+    </Reference>
     <Reference Include="Groupdocs.Web.UI.Comparison, Version=2.6.1.0, Culture=neutral, PublicKeyToken=c9073b8a6a9c78c8, processorArchitecture=MSIL">
       <HintPath>..\packages\groupdocs-comparison-dotnet.2.6.1\lib\Groupdocs.Web.UI.Comparison.dll</HintPath>
       <Private>True</Private>
