--- a/Examples/VisualBasic/GroupDocs.Comparison.Examples.VisualBasic.vbproj
+++ b/Examples/VisualBasic/GroupDocs.Comparison.Examples.VisualBasic.vbproj
@@ -52,8 +52,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GroupDocs.Comparison, Version=3.0.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\GroupDocs.Comparison.dll</HintPath>
+      <HintPath>..\packages\groupdocs-comparison-dotnet.3.0.0\lib\GroupDocs.Comparison.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
