Updated C# and VB.NET Examples for Release 3.1.0 with Common Comparison Operations

--- a/Examples/CSharp/GroupDocs.Comparison.Examples.CSharp.csproj
+++ b/Examples/CSharp/GroupDocs.Comparison.Examples.CSharp.csproj
@@ -35,8 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GroupDocs.Comparison, Version=3.0.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>..\packages\groupdocs-comparison-dotnet.3.0.0\lib\GroupDocs.Comparison.dll</HintPath>
+    <Reference Include="GroupDocs.Comparison, Version=3.1.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
+      <HintPath>..\packages\groupdocs-comparison-dotnet.3.1.0\lib\GroupDocs.Comparison.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="CommonComparisionOperations.cs" />
     <Compile Include="TextDcumentsComparision.cs" />
     <Compile Include="WorkBookDcumentsComparision.cs" />
     <Compile Include="PdfDcumentsComparision.cs" />
