Updated and added examples for new features in release 3.2.0

--- a/Examples/CSharp/GroupDocs.Comparison.Examples.CSharp.csproj
+++ b/Examples/CSharp/GroupDocs.Comparison.Examples.CSharp.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="CommonComparisionOperations.cs" />
+    <Compile Include="HTMLDcumentsComparision.cs" />
     <Compile Include="TextDcumentsComparision.cs" />
     <Compile Include="WorkBookDcumentsComparision.cs" />
     <Compile Include="PdfDcumentsComparision.cs" />
