--- a/Examples/VisualBasic/GroupDocs.Comparison.Examples.VisualBasic.vbproj
+++ b/Examples/VisualBasic/GroupDocs.Comparison.Examples.VisualBasic.vbproj
@@ -51,9 +51,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GroupDocs.Comparison, Version=3.2.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>..\packages\groupdocs-comparison-dotnet.3.2.0\lib\GroupDocs.Comparison.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="GroupDocs.Comparison, Version=3.3.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\groupdocs-comparison-dotnet.3.3.0\lib\GroupDocs.Comparison.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
