--- a/Showcases/GroupDocsComparisonMVCWebAPIDemo/GroupDocsComparisonMVCWebAPIDemo/GroupDocsComparisonMVCWebAPIDemo.csproj
+++ b/Showcases/GroupDocsComparisonMVCWebAPIDemo/GroupDocsComparisonMVCWebAPIDemo/GroupDocsComparisonMVCWebAPIDemo.csproj
@@ -38,9 +38,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GroupDocs.Comparison, Version=3.5.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>..\packages\groupdocs-comparison-dotnet.3.5.0\lib\GroupDocs.Comparison.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="GroupDocs.Comparison">
+      <HintPath>..\packages\groupdocs-comparison-dotnet.16.10.0\lib\GroupDocs.Comparison.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
