--- a/Showcases/GroupDocs.Comparison.Viewer/GroupDocsComparisonMvcDemo/GroupDocsComparisonMvcDemo.csproj
+++ b/Showcases/GroupDocs.Comparison.Viewer/GroupDocsComparisonMvcDemo/GroupDocsComparisonMvcDemo.csproj
@@ -57,11 +57,10 @@
       <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
     <Reference Include="GroupDocs.Comparison">
-      <HintPath>..\packages\groupdocs-comparison-dotnet.16.11.0\lib\GroupDocs.Comparison.dll</HintPath>
+      <HintPath>..\packages\groupdocs-comparison-dotnet.16.12.0\lib\GroupDocs.Comparison.dll</HintPath>
     </Reference>
-    <Reference Include="GroupDocs.Viewer, Version=3.7.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>..\packages\groupdocs-viewer-dotnet.3.7.0\lib\GroupDocs.Viewer.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="GroupDocs.Viewer">
+      <HintPath>..\packages\groupdocs-viewer-dotnet.16.12.0\lib\GroupDocs.Viewer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
