--- a/Showcases/GroupDocsComparisonMVCWebAPIDemo/GroupDocsComparisonMVCWebAPIDemo/GroupDocsComparisonMVCWebAPIDemo.csproj
+++ b/Showcases/GroupDocsComparisonMVCWebAPIDemo/GroupDocsComparisonMVCWebAPIDemo/GroupDocsComparisonMVCWebAPIDemo.csproj
@@ -39,7 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GroupDocs.Comparison">
-      <HintPath>..\packages\groupdocs-comparison-dotnet.17.1.0\lib\GroupDocs.Comparison.dll</HintPath>
+      <HintPath>..\packages\groupdocs-comparison-dotnet.17.2.0\lib\GroupDocs.Comparison.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -78,7 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
