--- a/Showcases/GroupDocs.Comparison.Viewer/GroupDocsComparisonMvcDemo/packages.config
+++ b/Showcases/GroupDocs.Comparison.Viewer/GroupDocsComparisonMvcDemo/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net40" />
+  <package id="Aspose.Words" version="14.5.0" targetFramework="net45" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net40" />
-  <package id="groupdocs-comparison-dotnet" version="17.5.0" targetFramework="net45" />
+  <package id="groupdocs-comparison-dotnet" version="17.6.0" targetFramework="net45" />
   <package id="groupdocs-viewer-dotnet" version="16.12.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.40804.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net40" />
