--- a/Examples/GroupDocs.Comparison.Examples.CSharp/GroupDocs.Comparison.Examples.CSharp.csproj
+++ b/Examples/GroupDocs.Comparison.Examples.CSharp/GroupDocs.Comparison.Examples.CSharp.csproj
@@ -35,8 +35,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GroupDocs.Comparison, Version=19.9.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>packages\GroupDocs.Comparison.19.9.0\lib\GroupDocs.Comparison.dll</HintPath>
+    <Reference Include="GroupDocs.Comparison, Version=19.10.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
+      <HintPath>packages\GroupDocs.Comparison.19.10.0\lib\net20\GroupDocs.Comparison.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
