--- a/Examples/GroupDocs.Comparison.Examples.CSharp.Core/GroupDocs.Comparison.Examples.CSharp.Core.csproj
+++ b/Examples/GroupDocs.Comparison.Examples.CSharp.Core/GroupDocs.Comparison.Examples.CSharp.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,7 +8,7 @@
   <Import Project="..\GroupDocs.Comparison.Examples.CSharp\GroupDocs.Comparison.Examples.CSharp.projitems" Label="Shared" />
 
   <ItemGroup>
-    <PackageReference Include="GroupDocs.Comparison" Version="21.11.0" />
+    <PackageReference Include="GroupDocs.Comparison" Version="21.12.0" />
   </ItemGroup>
 
 </Project>
