--- a/Examples/GroupDocs.Comparison.Examples.CSharp.Framework/GroupDocs.Comparison.Examples.CSharp.Framework.csproj
+++ b/Examples/GroupDocs.Comparison.Examples.CSharp.Framework/GroupDocs.Comparison.Examples.CSharp.Framework.csproj
@@ -36,7 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GroupDocs.Comparison, Version=22.4.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>..\packages\GroupDocs.Comparison.22.4.0\lib\net20\GroupDocs.Comparison.dll</HintPath>
+      <HintPath>..\packages\GroupDocs.Comparison.22.6.0\lib\net40\GroupDocs.Comparison.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
