Added methods for setting changes state in resultant file

--- a/Demos/MVC/src/GroupDocs.Comparison.MVC.csproj
+++ b/Demos/MVC/src/GroupDocs.Comparison.MVC.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Products\Comparison\Config\ComparisonConfiguration.cs" />
     <Compile Include="Products\Comparison\Controllers\ComparisonApiController.cs" />
     <Compile Include="Products\Comparison\Model\Request\CompareFileDataRequest.cs" />
+    <Compile Include="Products\Comparison\Model\Request\SetChangesRequest.cs" />
     <Compile Include="Products\Comparison\Model\Request\CompareRequest.cs" />
     <Compile Include="Products\Comparison\Model\Response\CompareResultResponse.cs" />
     <Compile Include="Products\Comparison\Service\ComparisonServiceImpl.cs" />
