--- a/Examples/GroupDocs.Comparison.Examples.CSharp.Core/GroupDocs.Comparison.Examples.CSharp.Core.csproj
+++ b/Examples/GroupDocs.Comparison.Examples.CSharp.Core/GroupDocs.Comparison.Examples.CSharp.Core.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <Import Project="..\GroupDocs.Comparison.Examples.CSharp\GroupDocs.Comparison.Examples.CSharp.projitems" Label="Shared" />
 
   <ItemGroup>
     <PackageReference Include="GroupDocs.Comparison" Version="23.1.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
