--- a/Demos/MVC/src/packages.config
+++ b/Demos/MVC/src/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net462" />
-  <package id="GroupDocs.Comparison" version="24.4.0" targetFramework="net462" />
+  <package id="GroupDocs.Comparison" version="24.5.0" targetFramework="net462" />
   <package id="jQuery" version="1.8.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Cors" version="5.2.5" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
@@ -20,7 +20,10 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Node-Kit" version="11.1.0.1" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
+  <package id="System.Drawing.Common" version="5.0.3" targetFramework="net462" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net462" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
   <package id="YamlDotNet" version="5.2.1" targetFramework="net462" />
 </packages>
