--- a/Examples/GroupDocs.Comparison.Examples.CSharp.Framework/packages.config
+++ b/Examples/GroupDocs.Comparison.Examples.CSharp.Framework/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GroupDocs.Comparison" version="24.4.0" targetFramework="net472" />
+  <package id="GroupDocs.Comparison" version="24.5.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
 </packages>
