--- a/Examples/GroupDocs.Comparison.Examples.CSharp.Core/GroupDocs.Comparison.Examples.CSharp.Core.csproj
+++ b/Examples/GroupDocs.Comparison.Examples.CSharp.Core/GroupDocs.Comparison.Examples.CSharp.Core.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <Import Project="..\GroupDocs.Comparison.Examples.CSharp\GroupDocs.Comparison.Examples.CSharp.projitems" Label="Shared" />
 
   <ItemGroup>
-    <PackageReference Include="GroupDocs.Comparison" Version="25.6.0" />
+    <PackageReference Include="GroupDocs.Comparison" Version="25.7.0" />
   </ItemGroup>
 
 </Project>
